[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endpoint-monitor"
version = "0.2.0"
description = "A CLI tool to monitor REST API endpoints"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0"
]

[project.scripts]
endpoint-monitor = "api_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api_monitor*"]